# react-native-conceal-crypto

./: .cursorrules  .eslintrc.js  .gitattributes  .gitignore  .npmignore  .npmrc  .prettierrc.json  CHANGELOG.md  ConcealCrypto.podspec  LICENSE  README.md  add_copyright.sh  biome.json  eslint.config.js  expo-module.config.json  nitro.json  package-lock.json  package.json  react-native-conceal-crypto.podspec  react-native.config.js  tsconfig.json
.github/workflows/: release.yml
android/: CMakeLists.txt  build.gradle
android/src/main/java/com/margelo/nitro/concealcrypto/: ConcealCryptoPackage.kt
android/src/main/java/expo/modules/concealcrypto/: ReactNativeConcealCryptoModule.kt  ReactNativeConcealCryptoView.kt
cpp/: Hmac.cpp  Hmac.hpp  HybridConcealCrypto.cpp  HybridConcealCrypto.hpp  HybridCryptonote.cpp  HybridCryptonote.hpp  chacha.h  chacha12.c  chacha8.c  chacha8.h  install.cpp  int-util.h  mn_random.cpp  mn_random.h
cpp/Cryptonote/: crypto.cpp  hash-ops.h
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
example/android/: .gitignore  build.gradle  local.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/anonymous/concealcryptoexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
ios/: ReactNativeConcealCrypto.podspec  ReactNativeConcealCryptoModule.swift  ReactNativeConcealCryptoView.swift
scripts/: fix-cmake-linking.js  fix-prefab-bug.js  fix-visibility.js
src/: index.ts
src/specs/: ConcealCrypto.nitro.ts  Cryptonote.nitro.ts
